More documentation updates

--- a/Dockerfile-db
+++ b/Dockerfile-db
@@ -1,4 +1,5 @@
 FROM postgres:latest
+MAINTAINER axocomm <axocomm@gmail.com>
 
 ADD resources/migrations/*.up.sql /migrations/
 ADD resources/bin/create-db /docker-entrypoint-initdb.d/init-ppd-db.sh
